# UselessGC

./: CMakeLists.txt  UselessGC.sln
UselessGC/: GC.cpp  GC.h  Object.cpp  Object.h  R.cpp  R.h  SysLog.cpp  SysLog.h  Test.cpp  UselessGC.vcxproj  UselessGC.vcxproj.filters  XString.cpp  XString.h
